--- a/tex/library.tex
+++ b/tex/library.tex
@@ -56,7 +56,7 @@ bookmarksopen=true,
 }
 \usepackage{fancyhdr}
 \pagestyle{fancy}
-\lfoot{FCCPC}
+\lfoot{FCCPC Library}
 \cfoot{\empty}
 \rfoot{\thepage}
 \renewcommand{\footrulewidth}{0.1pt}
