--- a/tex/library.tex
+++ b/tex/library.tex
@@ -54,6 +54,9 @@ bookmarksopen=true,
 }
 \usepackage{fancyhdr}
 \pagestyle{fancy}
+\lhead{\empty}
+\chead{\empty}
+\rhead{\empty}
 \lfoot{FCCPC Library}
 \cfoot{\empty}
 \rfoot{\thepage}
