--- a/tex/library.tex
+++ b/tex/library.tex
@@ -91,11 +91,9 @@ $O(EV^2)$\par
 $O(FE\log{V})$\par
 \lstinputlisting{./code/min_cost_flow.cpp}
 
-
 \subsection{最小シュタイナー木}
 $O(4^{|T|}V)$ \par
-gに無向グラフの隣接行列を入れる.\par
-Tに使いたい頂点の集合を入れる.\par
+gは無向グラフの隣接行列. Tは使いたい頂点の集合.\par
 \lstinputlisting{./code/min_steiner_tree.cpp}
 
 \end{document}
