--- a/tex/library.tex
+++ b/tex/library.tex
@@ -87,6 +87,11 @@ $O(N+M)$\par
 $O(EV^2)$\par
 \lstinputlisting{./code/max_flow.cpp}
 
+\subsection{二部マッチング}
+$O(EV)$\par
+\lstinputlisting{./code/bi_matching.cpp}
+
+
 \subsection{最小費用流}
 $O(FE\log{V})$\par
 \lstinputlisting{./code/min_cost_flow.cpp}
