--- a/tex/library.tex
+++ b/tex/library.tex
@@ -83,6 +83,10 @@ $O(N+M)$\par
 \lstinputlisting{./code/aho_corasick.cpp}
 
 \section{グラフ}
+\subsection{強連結成分分解}
+$O(V+E)$\par
+\lstinputlisting{./code/scc.cpp}
+
 \subsection{最大流}
 $O(EV^2)$\par
 \lstinputlisting{./code/max_flow.cpp}
