--- a/tex/library.tex
+++ b/tex/library.tex
@@ -83,6 +83,10 @@ $O(N+M)$\par
 \lstinputlisting{./code/aho_corasick.cpp}
 
 \section{グラフ}
+\subsection{橋}
+$O(V+E)$
+\lstinputlisting{./code/bridge.cpp}
+
 \subsection{強連結成分分解}
 $O(V+E)$\par
 \lstinputlisting{./code/scc.cpp}
