--- a/tex/library.tex
+++ b/tex/library.tex
@@ -83,8 +83,12 @@ $O(N+M)$\par
 \lstinputlisting{./code/aho_corasick.cpp}
 
 \section{グラフ}
+\subsection{関節点}
+$O(E)$\par
+ある関節点uがグラフをk個に分割するときartにはk-1個のuが含まれる. 不要な場合はuniqueを忘れないこと.\par
+\lstinputlisting{./code/art_point.cpp}
 \subsection{橋}
-$O(V+E)$
+$O(V+E)$\par
 \lstinputlisting{./code/bridge.cpp}
 
 \subsection{強連結成分分解}
