--- a/tex/library.tex
+++ b/tex/library.tex
@@ -1,4 +1,4 @@
-\documentclass[8pt,twocolumn,a4paper,landscape]{extarticle}
+\documentclass[9pt,twocolumn,a4paper,landscape]{extarticle}
 %
 \usepackage[dvipdfmx]{graphicx}
 \usepackage{latexsym}
@@ -41,7 +41,7 @@ bookmarksopen=true,
   breaklines = true,
   language=c++,
   captionpos=b,
-  basicstyle={\ttfamily \small},
+  basicstyle={\ttfamily \footnotesize},
   commentstyle={\itshape \color[cmyk]{1,0.4,1,0}},
   keywordstyle={\ttfamily \color[cmyk]{0.3,0.9,0,0}},
   stringstyle={\ttfamily \color[rgb]{0.8,0,0}},
