Add graph-coloring library

--- a/tex/library.tex
+++ b/tex/library.tex
@@ -121,6 +121,13 @@ $O(4^{|T|}V)$ \par
 gは無向グラフの隣接行列. Tは使いたい頂点の集合.\par
 \lstinputlisting{./code/min_steiner_tree.cpp}
 
+\subsection{包除原理}
+\subsubsection{彩色数}
+$O(2^VV)$\par
+N[i] := iと隣接する頂点の集合(iも含む)\par
+\lstinputlisting{./code/graph-coloring.cpp}
+
+
 \section{数学}
 \subsection{整数}
 \subsubsection{拡張ユークリッドの互除法}
