Update library.tex flow comment

--- a/tex/library.tex
+++ b/tex/library.tex
@@ -111,14 +111,17 @@ $O(V+E)$\par
 \subsection{フロー}
 \subsubsection{最大流}
 $O(EV^2)$\par
+MAXの指定を忘れないこと
 \lstinputlisting{./code/max_flow.cpp}
 
 \subsubsection{二部マッチング}
 $O(EV)$\par
-\lstinputlisting{./code/bi_matching.cpp}
 
+\lstinputlisting{./code/bi_matching.cpp}
+頂点数VとMAX_Vの指定を忘れないこと
 \subsubsection{最小費用流}
 $O(FE\log V)$\par
+頂点数VとMAX_Vの指定を忘れないこと
 \lstinputlisting{./code/min_cost_flow.cpp}
 
 \subsection{木}
