--- a/tex/library.tex
+++ b/tex/library.tex
@@ -94,11 +94,12 @@ LCS() : $O(|S+T|)$\par
 \lstinputlisting{./code/sa.cpp}
 
 \section{グラフ}
+\lstinputlisting{./code/graph.cpp}
 \subsection{強連結成分分解}
 \subsubsection{関節点}
 $O(E)$\par
 ある関節点uがグラフをk個に分割するときartにはk-1個のuが含まれる. 不要な場合はuniqueを忘れないこと.\par
-\lstinputlisting{./code/art_point.cpp}
+\lstinputlisting{./code/articulation.cpp}
 
 \subsubsection{橋}
 $O(V+E)$\par
@@ -124,10 +125,13 @@ $O(FE\log V)$\par
 \subsection{木}
 \subsubsection{木の直径}
 ある点(どこでもよい)から一番遠い点aを求める. 点aから一番遠い点までの距離がその木の直径になる.\par
+\subsubsection{最小全域木}
+\lstinputlisting{./code/mst.cpp}
 \subsubsection{最小シュタイナー木}
 $O(4^{|T|}V)$ \par
 gは無向グラフの隣接行列. Tは使いたい頂点の集合.\par
 \lstinputlisting{./code/min_steiner_tree.cpp}
+
 
 \subsection{包除原理}
 \subsubsection{彩色数}
@@ -138,40 +142,8 @@ N[i] := iと隣接する頂点の集合(iも含む)\par
 
 \section{数学}
 \subsection{整数}
-\subsubsection{拡張ユークリッドの互除法}
-$O(\log min(a,b))$\par
-$ax+by=gcd(a,b)$を求める. 解がある場合は1を返す.
-\lstinputlisting{./code/extgcd.cpp}
-
-\subsubsection{逆元}
-\begin{table}[htb]
-  \begin{tabular}{|c|c|} \hline
-    $mod\_inverse()$ & $gen\_mod\_inv()$ \\ \hline
-    $O(\log n)$ & $O(n)$ \\ \hline
-     & $extgcd()$ \\ \hline
-  \end{tabular}
-\end{table}
-$gen\_mod\_inv()$はN未満の全ての数の逆元を生成する.
-\lstinputlisting{./code/mod_inverse.cpp}
-
-\subsubsection{冪剰余}
-$O(\log k)$\par
-\lstinputlisting{./code/mod_pow.cpp}
-
-\subsubsection{階乗($n! \bmod m$)}
-\begin{table}[htb]
-  \begin{tabular}{|c|c|} \hline
-    $gen\_fact()$ & $mod\_fact()$ \\ \hline
-    $O(m)$ & $O(\log_{m} n)$ \\ \hline
-  \end{tabular}
-\end{table}
-mは素数.
-\lstinputlisting{./code/mod_fact.cpp}
-
-\subsubsection{組み合わせ($_nC_k \bmod m$)}
-$O(\log n)$\par
-$mod\_fact()$と$mod\_inverse()$が必要.
-\lstinputlisting{./code/mod_combi.cpp}
+\subsubsection{剰余}
+\lstinputlisting{./code/number_theory.cpp}
 
 \subsubsection{カタラン数}
 $n\leq 16$程度が限度. $n\geq 1$について以下が成り立つ.
@@ -222,33 +194,20 @@ $extgcd()$, $mod\_inverse()$, $poly\_inv()$, $poly\_mul()$, $fmt()$が必要.
 C++11だとarrayという名前では衝突するのでarrにしている.\par
 \lstinputlisting{./code/matrix.cpp}
 
-\subsubsection{単位行列}
-$O(N)$ \par
-\lstinputlisting{./code/matrix_ident.cpp}
-
-\subsubsection{積}
-\begin{table}[htb]
-  \begin{tabular}{|c|c|c|} \hline
-    arr*arr & mat*arr & mat*mat \\ \hline
-    $O(N)$ & $O(N^2)$ & $O(N^3)$\\ \hline
-  \end{tabular}
-\end{table}
-\lstinputlisting{./code/matrix_mul.cpp}
-
-\subsubsection{累乗}
-$O(N^3 \log e)$\par
-単位行列と積(mat*mat)が必要.\par
-\lstinputlisting{./code/matrix_pow.cpp}
-
 \subsubsection{線形方程式の解(Givens消去法)}
 $O(N^3)$
 \lstinputlisting{./code/givens.cpp}
 
-\subsubsection{トレース}
-$O(N)$
-\lstinputlisting{./code/matrix_trace.cpp}
-
 \section{幾何}
-\lstinputlisting{./code/geom.cpp}
+\lstinputlisting{./code/geometry.cpp}
+\lstinputlisting{./code/convex_hull.cpp}
+
+\section{データ構造}
+\subsection{Union-Find木}
+\lstinputlisting{./code/disjoint_set.cpp}
+\subsection{赤黒木}
+\lstinputlisting{./code/rbtree.cpp}
+\subsection{永続赤黒木}
+\lstinputlisting{./code/persistent_rbtree.cpp}
 
 \end{document}
