--- a/tex/library.tex
+++ b/tex/library.tex
@@ -191,7 +191,6 @@ $extgcd()$, $mod\_inverse()$, $poly\_inv()$, $poly\_mul()$, $fmt()$が必要.
 
 
 \subsection{行列}
-C++11だとarrayという名前では衝突するのでarrにしている.\par
 \lstinputlisting{./code/matrix.cpp}
 
 \subsubsection{線形方程式の解(Givens消去法)}
@@ -200,6 +199,7 @@ $O(N^3)$
 
 \section{幾何}
 \lstinputlisting{./code/geometry.cpp}
+\subsection{凸包}
 \lstinputlisting{./code/convex_hull.cpp}
 
 \section{データ構造}
