--- a/tex/library.tex
+++ b/tex/library.tex
@@ -86,6 +86,17 @@ linumはemacs24のみ\par
 \subsection{tpl.cpp}
 \lstinputlisting{./code/tpl.cpp}
 
+\subsection{get input}
+\begin{lstlisting}
+wget -r http://(url of sample input)
+\end{lstlisting}
+
+\subsection{alias}
+\begin{lstlisting}
+alias g++='g++ -g -O2 -std=gnu++0x';
+alias emacs='emacs -nw';
+\end{lstlisting}
+
 \section{文字列}
 \subsection{マッチング}
 \subsubsection{複数文字列マッチング(Aho-Corasick法)}
@@ -219,5 +230,7 @@ $O(N^3)$
 \lstinputlisting{./code/rbtree.cpp}
 \subsection{永続赤黒木}
 \lstinputlisting{./code/persistent_rbtree.cpp}
+\subsection{wavelet行列}
+\lstinputlisting{./code/wavelet.cpp}
 
 \end{document}
