--- a/tex/library.tex
+++ b/tex/library.tex
@@ -111,6 +111,12 @@ LCS() : $O(|S+T|)$\par
 
 \lstinputlisting{./code/sa.cpp}
 
+\subsection{回文長(Manacher)}
+$O(N)$\par
+各文字を中心とした時の回文の最長の半径.\par
+偶数長の回文はダミーを挟むことで求められている.\par
+\lstinputlisting{./code/manacher.cpp}
+
 \section{グラフ}
 \lstinputlisting{./code/graph.cpp}
 \subsection{強連結成分分解}
