--- a/tex/library.tex
+++ b/tex/library.tex
@@ -156,7 +156,7 @@ $O(EV)$\par
 $O(FE\log V)$\par
 \lstinputlisting{./code/min_cost_flow.cpp}
 
-\subsection{Gomory-Hu木}
+\subsubsection{Gomory-Hu木}
 $O(V MAXFLOW)$
 \lstinputlisting{./code/gomory_hu.cpp}
 
