Fix file position

--- a/library.tex
+++ b/library.tex
@@ -73,6 +73,6 @@ bookmarksopen=true,
 \input{./tex/graph.tex}
 \input{./tex/math.tex}
 \input{./tex/geometory.tex}
-\input{./tex/date-structure.tex}
+\input{./tex/data-structure.tex}
 
 \end{document}
