--- a/tex/string.tex
+++ b/tex/string.tex
@@ -11,7 +11,7 @@ S中にTが含まれないなら-1, 含まれるならその先頭.\par
 LCS() : $O(|S+T|)$\par
 最長共通部分文字列. (先頭, 長さ)を返す.
 
-\lstinputlisting{string/sa.cpp}
+\lstinputlisting{string/suffix_array.cpp}
 
 \subsection{回文長(Manacher)}
 $O(N)$\par
