Add description of wavelet

--- a/library.tex
+++ b/library.tex
@@ -74,5 +74,6 @@ bookmarksopen=true,
 \input{./tex/math.tex}
 \input{./tex/geometory.tex}
 \input{./tex/data-structure.tex}
+\input{./tex/others.tex}
 
 \end{document}
