--- a/tex/math.tex
+++ b/tex/math.tex
@@ -63,3 +63,8 @@ $extgcd()$, $mod\_inverse()$, $poly\_inv()$, $poly\_mul()$, $fmt()$が必要.
 \subsubsection{線形方程式の解(Givens消去法)}
 $O(N^3)$
 \lstinputlisting{math/matrix/givens.cpp}
+
+\subsection{割り当て問題}
+\subsubsection{ハンガリアン法}
+$O(N^2)$
+\lstinputlisting{math/hungarian.cpp}
