Fix geometory tex

--- a/tex/geometory.tex
+++ b/tex/geometory.tex
@@ -1,19 +1,27 @@
 \section{幾何}
 \lstinputlisting{geometory/geometry.cpp}
-\subsection{凸包}
+\subsection{点}
+\lstinputlisting{geometory/point.cpp}
+\subsection{直線と線分}
+\lstinputlisting{geometory/line.cpp}
+\subsection{円}
+\lstinputlisting{geometory/circle.cpp}
+\subsection{多角形}
+\lstinputlisting{geometory/polygon.cpp}
+\subsubsection{凸包}
 \lstinputlisting{geometory/convex_hull.cpp}
-\subsection{最近点対}
+\subsubsection{最近点対}
 だいたい$O(n\log n)$, 最悪縦1列に並んでる場合$O(n^2)$
 \lstinputlisting{geometory/closest_pair.cpp}
-\subsection{点-多角形包含判定}
+\subsubsection{点-多角形包含判定}
 $O(n)$
 \lstinputlisting{geometory/contains.cpp}
-\subsection{凸多角形の共通部分}
+\subsubsection{凸多角形の共通部分}
 $O(n+m)$
 \lstinputlisting{geometory/convex_intersect.cpp}
-\subsection{凸多角形の直径}
+\subsubsection{凸多角形の直径}
 $O(n)$
 \lstinputlisting{geometory/convex_diameter.cpp}
-\subsection{ドロネー三角形分割(逐次添加法)}
+\subsubsection{ドロネー三角形分割(逐次添加法)}
 $O(n^2)$
 \lstinputlisting{geometory/delaunay.cpp}
