--- a/library.tex
+++ b/library.tex
@@ -72,7 +72,7 @@ bookmarksopen=true,
 \input{./tex/string.tex}
 \input{./tex/graph.tex}
 \input{./tex/math.tex}
-\input{./tex/geometory.tex}
+\input{./tex/geometry.tex}
 \input{./tex/data-structure.tex}
 \input{./tex/others.tex}
 
