Add indsets to tex

--- a/tex/graph.tex
+++ b/tex/graph.tex
@@ -59,8 +59,10 @@ gは無向グラフの隣接行列. Tは使いたい頂点の集合.\par
 順序なし$O(n\log n)$
 \lstinputlisting{graph/tree_isomorphism.cpp}
 
-\subsection{包除原理}
-\subsubsection{彩色数}
+\subsection{彩色数}
+\subsubsection{包除原理}
 $O(2^VV)$\par
 N[i] := iと隣接する頂点の集合(iも含む)\par
 \lstinputlisting{graph/graph_coloring.cpp}
+\subsubsection{極大独立集合}
+\lstinputlisting{graph/indsets.cpp}
