--- a/tex/graph.tex
+++ b/tex/graph.tex
@@ -59,6 +59,9 @@ gは無向グラフの隣接行列. Tは使いたい頂点の集合.\par
 順序なし$O(n\log n)$
 \lstinputlisting{graph/tree_isomorphism.cpp}
 
+\subsubsection{HL分解}
+\lstinputlisting{graph/heavy_light_decomposition.cpp}
+
 \subsection{彩色数}
 \subsubsection{包除原理}
 $O(2^VV)$\par
@@ -66,3 +69,5 @@ N[i] := iと隣接する頂点の集合(iも含む)\par
 \lstinputlisting{graph/graph_coloring.cpp}
 \subsubsection{極大独立集合}
 \lstinputlisting{graph/indsets.cpp}
+
+\subsection{}
