--- a/tex/math.tex
+++ b/tex/math.tex
@@ -4,6 +4,9 @@
 \subsubsection{剰余}
 \lstinputlisting{math/modulo/number_theory.cpp}
 
+\subsubsection{離散対数問題}
+\lstinputlisting{math/modulo/discrete_log.cpp}
+
 \subsubsection{カタラン数}
 $n\leq 16$程度が限度. $n\geq 1$について以下が成り立つ.
 \begin{eqnarray*}
