--- a/tex/data-structure.tex
+++ b/tex/data-structure.tex
@@ -11,6 +11,10 @@
 \subsection{Segment Tree}
 区間addとRMQができる.
 \lstinputlisting{data-structure/segtree_range_add.cpp}
+
+\subsection{Sparse table}
+\lstinputlisting{data-structure/sparse_table.cpp}
+
 \subsection{赤黒木}
 \lstinputlisting{data-structure/rbtree.cpp}
 \subsection{永続赤黒木}
