--- a/tex/math.tex
+++ b/tex/math.tex
@@ -4,6 +4,9 @@
 \subsubsection{剰余}
 \lstinputlisting{math/modulo/number_theory.cpp}
 
+\subsubsection{剰余積}
+\lstinputlisting{math/modulo/mod_mul.cpp}
+
 \subsubsection{離散対数問題}
 \lstinputlisting{math/modulo/discrete_log.cpp}
 
