--- a/tex/data-structure.tex
+++ b/tex/data-structure.tex
@@ -15,6 +15,12 @@
 \subsection{Sparse table}
 \lstinputlisting{data-structure/sparse_table.cpp}
 
+\subsection{RBST}
+\lstinputlisting{data-structure/rbst.cpp}
+
+\subsection{永続RBST}
+\lstinputlisting{data-structure/persistent_rbst.cpp}
+
 \subsection{赤黒木}
 \lstinputlisting{data-structure/rbtree.cpp}
 \subsection{永続赤黒木}
