--- a/tex/string.tex
+++ b/tex/string.tex
@@ -15,6 +15,6 @@ LCS() : $O(|S+T|)$\par
 
 \subsection{回文長(Manacher)}
 $O(N)$\par
-各文字を中心とした時の回文の最長の半径.\par
+各文字を中心とした時の回文の長さ.\par
 偶数長の回文はダミーを挟むことで求められている.\par
 \lstinputlisting{string/manacher.cpp}
