Add checklist to library

--- a/library.tex
+++ b/library.tex
@@ -75,5 +75,6 @@ bookmarksopen=true,
 \input{./tex/geometry.tex}
 \input{./tex/data-structure.tex}
 \input{./tex/others.tex}
+\input{./tex/checklist.tex}
 
 \end{document}
