--- a/tex/graph.tex
+++ b/tex/graph.tex
@@ -62,6 +62,8 @@ gは無向グラフの隣接行列. Tは使いたい頂点の集合.\par
 \subsubsection{HL分解}
 \lstinputlisting{graph/heavy_light_decomposition.cpp}
 
+\subsubsection{重心分解}
+\lstinputlisting{graph/centroid_decomposition.cpp}
 \subsection{彩色数}
 \subsubsection{包除原理}
 $O(2^VV)$\par
@@ -70,4 +72,3 @@ N[i] := iと隣接する頂点の集合(iも含む)\par
 \subsubsection{極大独立集合}
 \lstinputlisting{graph/indsets.cpp}
 
-\subsection{}
