--- a/tex/math.tex
+++ b/tex/math.tex
@@ -48,18 +48,15 @@ $O(N \log N)$\par
 \lstinputlisting{math/fmt.cpp}
 
 \subsubsection{積(FMT)}
-$O(N \log N)$\par
-$poly\_mul()$が必要.
+$O(N \log N)$. \texttt{fmt()}が必要.
 \lstinputlisting{math/poly_mul.cpp}
 
 \subsubsection{逆元(FMT)}
-$O(N \log N)$\par
-$extgcd()$, $mod\_inverse()$, $poly\_mul()$, $fmt()$が必要.
+$O(N \log N)$. \texttt{extgcd()}, \texttt{mod\_inverse()}, \texttt{poly\_mul()}, \texttt{fmt()}が必要.
 \lstinputlisting{math/poly_inv.cpp}
 
 \subsubsection{平方根(FMT)}
-$O(N log N)$\par
-$extgcd()$, $mod\_inverse()$, $poly\_inv()$, $poly\_mul()$, $fmt()$が必要.
+$O(N log N)$. \texttt{extgcd()}, \texttt{mod\_inverse()}, \texttt{poly\_inv()}, \texttt{poly\_mul()}, \texttt{fmt()}が必要.
 \lstinputlisting{math/poly_sqrt.cpp}
 
 
