--- a/tex/data-structure.tex
+++ b/tex/data-structure.tex
@@ -12,6 +12,9 @@
 区間addとRMQができる.
 \lstinputlisting{data-structure/segtree_range_add.cpp}
 
+\subsection{Range Tree (Simple)}
+\lstinputlisting{data-structure/range_tree.cpp}
+
 \subsection{Sparse table}
 \lstinputlisting{data-structure/sparse_table.cpp}
 
