--- a/tex/graph.tex
+++ b/tex/graph.tex
@@ -34,6 +34,11 @@ $O(EV^2)$\par
 $O(EV)$\par
 
 \lstinputlisting{graph/flow/bi_matching.cpp}
+
+\subsubsection{一般グラフの最大マッチング}
+$O(V^3)$\par
+\lstinputlisting{graph/maximum_matching.cpp}
+
 \subsubsection{最小費用流}
 $O(FE\log V)$\par
 \lstinputlisting{graph/flow/minimum_cost_flow.cpp}
