--- a/tex/string.tex
+++ b/tex/string.tex
@@ -13,6 +13,12 @@ LCS() : $O(|S+T|)$\par
 
 \lstinputlisting{string/suffix_array.cpp}
 
+\subsection{Z-algorithm}
+
+\texttt{s}, \texttt{s[i:]} の最長共通部分列の長さ
+
+\lstinputlisting{string/lcp0.cpp}
+
 \subsection{回文長(Manacher)}
 $O(N)$\par
 各文字を中心とした時の回文の長さ.\par
