--- a/library.tex
+++ b/library.tex
@@ -9,10 +9,11 @@
 \usepackage{ascmac}
 \usepackage{indentfirst}
 %
-\setlength{\columnsep}{3zw} 
+\setlength{\columnsep}{3zw}
 \setlength{\topmargin}{20mm}
-\addtolength{\textheight}{-40mm} 
-\addtolength{\topmargin}{-2in}
+\addtolength{\textheight}{-40mm}
+\addtolength{\topmargin}{-1.55in}
+\setlength{\headsep}{10pt}
 \setlength{\textheight}{190mm}
 \setlength{\oddsidemargin}{-15mm}
 \setlength{\textwidth}{279mm}
@@ -56,14 +57,16 @@ bookmarksopen=true,
 \usepackage{fancyhdr}
 \pagestyle{fancy}
 \lhead{\empty}
-\chead{\empty}
-\rhead{\empty}
-\lfoot{FCCPC Library}
+\chead{FCCPC\_arroy (Tokyo Institute of Technology)}
+\rhead{\thepage}
+%\lfoot{FCCPC Library}
+\lfoot{\empty}
 \cfoot{\empty}
-\rfoot{\thepage}
-\renewcommand{\footrulewidth}{0.1pt}
-\renewcommand{\headrulewidth}{0pt}
-\footskip 24pt
+\rfoot{\empty}
+%\rfoot{\thepage}
+\renewcommand{\footrulewidth}{0.0pt}
+\renewcommand{\headrulewidth}{0.1pt}
+%\footskip 24pt
 %
 \begin{document}
 \tableofcontents
